--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="action_flash">闪光灯</string>
     <string name="title_activity_result">ResultActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 </resources>
